# uwp

./: .clangd  .gitignore  .gitmodules  .pre-commit-config.yaml  CMakeLists.txt  INSTALL.md  README.md  environment.yml
include/uwp/: geometry.hpp  logging.hpp  mutex_protected_set.hpp  parallel_for.hpp  shapefile.hpp  update.hpp
script/: _viz_common.py  init_workspace.sh  osmconf.ini  update_water_polygons.py  visualize_diff.py  visualize_patches.py  visualize_server.py
src/: main.cpp  shapefile.cpp  update.cpp
